# axion-health

./: .gitignore  LICENSE  README.md  SAHHA_API_FIXES.md  TECHNICAL_DOCUMENTATION.md  package.json  tailwind.config.ts  vercel.json
.github/: .bandit  TESTING.md
.github/workflows/: ci-cd.yml
api/: config.py  diagnostic_check.py  index.py  models.py  pyproject.toml  requirements.txt  setup_pinecone.py  test_data_load.py
api/agents/: __init__.py  gemini_orchestrator.py
api/chroma_data/: chroma.sqlite3
api/schema/: chat_history.sql  fix_health_metrics_rls.sql  health_metrics.sql
api/services/: chat_history.py  chromadb_client.py.bak  pinecone_client.py  sahha.py  supabase_client.py
api/tests/: __init__.py  conftest.py  test_anomaly_detection.py  test_correlation_analysis.py  test_external_research.py  test_forecasting.py  test_journal_search.py
api/tools/: __init__.py  anomaly_detection.py  correlation_analysis.py  external_research.py  forecasting.py  journal_search.py
app/: globals.css  layout.tsx  page.tsx
app/auth/: page.tsx
app/dashboard/: page.tsx
app/deep-dive/: page.tsx
app/journal/: page.tsx
app/settings/: page.tsx
components/: AnimatedSection.tsx  NavigationLoading.tsx  ProtectedRoute.tsx  Sidebar.tsx
components/dashboard/: ChartTypeSelector.tsx  DataQualityIndicator.tsx  MetricSelector.tsx  VariantToggle.tsx
contexts/: AuthContext.tsx
lib/: animations.ts  api.ts  biomarker-metadata.ts  supabase.ts  types.ts
